# mhjServer

./: CMakeLists.txt  README.md  美好家安全通讯协议v1.0.doc
MHJDeviceServer/: CMakeLists.txt  mhjdeviceserver.sh  工程配置说明
MHJDeviceServer/header/DeviceProcess/: MHJDataBaseServer.h  MHJDeviceManage.h  MHJDeviceServerConfig.h  MHJMqtt.h  MHJRedisServer.h  MHJRedisSubscribeProcessServer.h  MHJSecurityDeviceServer.h  MHJSecurityServerClient.h  MhjDeviceServerHander.h  ProcessAPP.h  ProcessHost.h  ProcessServerFactory.h  ProcessSwitch.h  ProtocolToApp.h  ProtocolToSwitch.h  ServerClientProcess.h
MHJDeviceServer/src/: MHJDeviceServer.cpp  MHJIncludeInit.h
MHJDeviceServer/src/DeviceProcess/: MHJDataBaseServer.cpp  MHJDeviceManage.cpp  MHJDeviceServerConfig.cpp  MHJMqtt.cpp  MHJRedisServer.cpp  MHJRedisSubscribeProcessServer.cpp  MHJSecurityDeviceServer.cpp  MHJSecurityServerClient.cpp  MhjDeviceServerHander.cpp  ProcessAPP.cpp  ProcessHost.cpp  ProcessServerFactory.cpp  ProcessSwitch.cpp  ProtocolToApp.cpp  ProtocolToSwitch.cpp  ServerClientProcess.cpp
MHJDeviceServer/src/DeviceProcess/mqtt/: client_shared.cpp
MHJServerShared/: CMakeLists.txt  MhJServerShared.cpp  MhJServerShared.h
MHJServerShared/Protocol/: MHJDefine.h  MHJSwitchESP8266Define.h  ProtocolAdmin.h  ProtocolApp.h  ProtocolBroadcastDeviceSwitch.h  ProtocolDeviceBuletoothDoor.h  ProtocolDeviceCurtain.h  ProtocolDeviceSwitch.h  ProtocolHost.h  ProtocolServer.h  ProtocolServerRedisDefine.h  ProtocolTypeDefine.c  ProtocolTypeDefine.h
MHJServerShared/header/: CClientASIO.h  HostClientFactory.h  MHJConfigFactory.h  MHJFuncTimeRecordMap.h  MHJFunctionTimeRecord.h  MHJHostClient.h  MHJMsgDecoder.h  MHJProtocol.h  MHJSecurityFactory.h  MHJTimeRecordList.h  ProcessFactory.h  ProcessTransformationFactory.h  Protocol.h  QueueData.h  SP_OnlineManager.h  ServerHandler.h  ServerProcessHandlerFactory.h
MHJServerShared/header/Tools/: HostAddress.h  stringTools.h
MHJServerShared/src/: CClientASIO.cpp  HostClientFactory.cpp  MHJConfigFactory.cpp  MHJFunctionTimeRecord.cpp  MHJHostClient.cpp  MHJMsgDecoder.cpp  MHJProtocol.cpp  MHJTimeRecordList.cpp  ProcessFactory.cpp  ProcessTransformationFactory.cpp  Protocol.c  SP_OnlineManager.cpp  ServerHandler.cpp  ServerProcessHandlerFactory.cpp
MHJServerShared/src/Tools/: HostAddress.cpp  stringTools.cpp
MHJServerSharedMySql/: .cproject  .project  CMakeLists.txt
MHJServerSharedMySql/DbDefine/: JsonAdminEntity.cpp  JsonAdminEntity.h  JsonStrObjMap.cpp  JsonStrObjMap.h  MHJDBInterface.cpp  MHJDBInterface.h  MHJSubscribe.cpp  MHJSubscribe.h  MoAdminEntity.h  MoDbKey.cpp  MoDbKey.h  MoMHJDeviceVirtualDefine.h  MoMhjUserEntity.h  MoMhjdeviceactivation.h  MoMhjdeviceauthorize.h  MoMhjdevicebase.h  MoMhjdevicechild.h  QueueNode.h  RedisQueueManage.cpp  RedisQueueManage.h  ServiceNum2KeyMap.h
MHJServerSharedMySql/database/: MHJDatabase.hxx  MHJDatabase.xml  MHJSqlTracer.h  build.txt
MHJServerSharedMySql/database/migration/: MHJDatabase-002-post.sql  MHJDatabase-002-pre.sql  MHJDatabase-003-pre.sql  MHJDatabase-004-post.sql  MHJDatabase-004-pre.sql  MHJDatabase-005-pre.sql  MHJDatabase-006-post.sql  MHJDatabase-006-pre.sql  MHJDatabase-007-post.sql  MHJDatabase-007-pre.sql  MHJDatabase-008-pre.sql  MHJDatabase-009-pre.sql  MHJDatabase-010-post.sql  MHJDatabase-010-pre.sql  MHJDatabase-011-pre.sql  MHJDatabase-012-pre.sql  MHJDatabase-013-pre.sql  MHJDatabase-014-post.sql  MHJDatabase-014-pre.sql  MHJDatabase-015-post.sql  MHJDatabase-015-pre.sql  MHJDatabase-016-post.sql  MHJDatabase-016-pre.sql  MHJDatabase-017-post.sql  MHJDatabase-017-pre.sql  MHJDatabase-018-pre.sql  MHJDatabase-019-post.sql  MHJDatabase-019-pre.sql  MHJDatabase-020-post.sql  MHJDatabase-020-pre.sql  MHJDatabase-021-pre.sql  MHJDatabase-022-post.sql  MHJDatabase-022-pre.sql  MHJDatabase-023-post.sql  MHJDatabase-023-pre.sql  MHJDatabase-024-pre.sql  MHJDatabase-025-pre.sql  MHJDatabase-odb.cxx  MHJDatabase-odb.hxx  MHJDatabase-odb.ixx  (+2 more)
MHJServerSharedMySql/header/: MHJDBInterfaceFactory.h  MHJDataBaseFactory.h  MHJRedisBaseFactory.h  MHJRedisBlpop.h  MHJRedisCmd.h  MHJRedisSubscribeFactory.h  MHJRedisSubscribeProcessFactory.h  MHJSecurityFactoryClient.h  MHJSecurityFactoryServer.h  MHJSecurityManageAPP.h  MHJSecurityManageAdmin.h  MHJSecurityManageDevice.h  MHJSecurityManageFactory.h  MHJSecurityManageHost.h  MHJSecurityManageServer.h  ProcessTransformationRedis.h  md5.h
MHJServerSharedMySql/src/: MHJDBInterfaceFactory.cpp  MHJDataBaseFactory.cpp  MHJRedisBaseFactory.cpp  MHJRedisBlpop.cpp  MHJRedisCmd.cpp  MHJRedisSubscribeFactory.cpp  MHJRedisSubscribeProcessFactory.cpp  MHJSecurityFactory.cpp  MHJSecurityFactoryClient.cpp  MHJSecurityFactoryServer.cpp  MHJSecurityManageAPP.cpp  MHJSecurityManageAdmin.cpp  MHJSecurityManageDevice.cpp  MHJSecurityManageFactory.cpp  MHJSecurityManageHost.cpp  MHJSecurityManageServer.cpp  ProcessTransformationRedis.cpp  md5.cpp
MHJSpserverLib/: CMakeLists.txt
MHJSpserverLib/Header/: spbuffer.hpp  sphandler.hpp  spserver.hpp
MHJSpserverLib/Source/: spbuffer.cpp  sphandler.cpp  spiochannel.cpp  spioutils.cpp  spserver.cpp
